--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
           <button type="submit">Enviar</button>
        
       </form>
+
+      <form action="/" method="post" name="correo">
+        <input type="email" name="mail">
+        <input type="submit" value="enviar">
+      </form>
       
 </body>
 </html>
