--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        
       </form>
 
-      <form action="/" method="post" name="correo">
+      <form method="post" name="correo" netlify>
         <input type="email" name="mail">
         <input type="submit" value="enviar">
       </form>
